[gd_scene load_steps=3 format=3 uid="uid://duhm48nuq1ni3"]

[ext_resource type="Script" path="res://scripts/lvl_button.gd" id="1_okx7h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bmm8t"]
bg_color = Color(0.74502, 0.95123, 0.528207, 1)
border_width_bottom = 10
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="LvlButton" type="Button"]
offset_right = 200.0
offset_bottom = 90.0
theme_override_colors/font_focus_color = Color(0.165656, 0.165656, 0.165656, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxFlat_bmm8t")
text = "Level Name"
script = ExtResource("1_okx7h")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
